<resources>
    <string name="app_name">Get Kracking</string>
    <string name="logo_get_krackin">Logo Get Krackin</string>
    <string name="title_activity_welcome" translatable="false">WelcomeActivity</string>
    <string name="tab_text_1">Ingresar</string>
    <string name="tab_text_2">Registrarse</string>
    <string name="welcome1">Para tener una experiencia mas personalizada, inicie sesión!</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email o nombre de usuario</string>
    <string name="prompt_password">Contraseña</string>
    <string name="action_register">Registrarse</string>
    <string name="action_sign_in">Ingresar</string>
    <string name="welcome" translatable="false">"Welcome!"</string>
    <string name="invalid_username" translatable="false">Not a valid username</string>
    <string name="invalid_password" translatable="false">Password must be >5 characters</string>
    <string name="login_failed" translatable="false">"Login failed"</string>
    <string name="register_failed">Usuario o email ya en uso</string>

    <!--    Strings del resto de la app-->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>
    <string name="contrasenia">Contraseña</string>
    <string name="welcome_login_link"><u>¿Olvidaste tu contraseña?</u></string>
    <string name="welcome_link"><u>Continuar sin cuenta</u></string>
    <string name="home_button">Inicio</string>
    <string name="bottombaricon_social">Social</string>
    <string name="bottombaricon_search">Busqueda</string>
    <string name="bottombaricon_stats">Estadisticas</string>
    <string name="bottombaricon_perfil">Perfil</string>
    <string name="highlight_routine">Rutina destacada</string>
    <string name="fav_icon_string">Icono de favoritos</string>
    <string name="weight_icon">Icono de mancuerna</string>
    <string name="workout_image">imagen de rutina</string>
    <string name="category1rating_routine">Dificultad</string>
    <string name="category2rating_routine">Flexibilidad</string>
    <string name="category3rating_routine">Resistencia</string>
    <string name="category4rating_routine">Fuerza</string>
    <string name="duration_routine_string"> minutos</string>
    <string name="buttonstart_routine">¡Empezar!</string>
    <string name="favourites_routines">Favoritos</string>
    <string name="recent_routines">Recientes</string>
    <string name="recomended_routines">Recomendados</string>
    <string name="first_category_recomended_routines">Cardio</string>
    <string name="second_category_recomended_routines" translatable="false">HIIT</string>
    <string name="third_category_recomended_routines">Elongacion</string>
    <string name="imagen_descriptiva_de_la_rutina">Imagen descriptiva de la rutina</string>
    <string name="buttonstart_routine_string">¡Empezar!</string>
    <string name="name_in_excercise_card">Nombre:</string>
    <string name="cantidad">Cantidad:</string>
    <string name="imagen_ilustrativa_del_ejercicio">Imagen ilustrativa del ejercicio</string>
    <string name="logout">Cerrar sesión</string>
    <string name="terms_and_conditions">Términos y condiciones</string>
    <string name="feedback" translatable="false">Feedback</string>
    <string name="more_information">Más información</string>
    <string name="privacy">Privacidad</string>
    <string name="notifications">Notificaciones</string>
    <string name="edit_profile">Editar perfil</string>
    <string name="configuration">Configuración</string>
    <string name="requirements">Requerimientos:</string>
    <string name="sections">Secciones</string>
    <string name="login">Ingresar</string>
    <string name="register">Registrarse</string>
    <string name="username_hint">Nombre de usuario</string>
    <string name="verification_code">Codigo de verificacion</string>
    <string name="email_confirmation">Confirmar email</string>
    <string name="confirmation_close_dialog">Cancelar</string>
    <string name="confirmation_done_dialog">Listo</string>
    <string name="parameter_error">Error en parametros</string>
    <string name="invalid_email_format">Formato de mail invalido</string>
    <string name="invalid_confirmationcode_format">El codigo debe de ser de 6 caracteres</string>
    <string name="username_missing">Falta el nombre de usuario</string>
    <string name="wrong_password_format">Formato de contrasenia invalido</string>
    <string name="login_error">Nombre o contraseña incorrectos</string>
    <string name="chip_favourites">Favoritos</string>
    <string name="chip_lowdifficulty">Faciles</string>
    <string name="chip_mediumdifficulty">Normales</string>
    <string name="chip_highdifficulty">Dificiles</string>
    <string name="search_hint">Buscar</string>
    <string name="name_value_perfil">Nombre:</string>
    <string name="image_value_perfil">Imágen:</string>
    <string name="username_value">Nombre de usuario:</string>
    <string name="email_value_perfil">Email:</string>
    <string name="back_button">Volver</string>
    <string name="save_changes_button">Guardar cambios</string>
    <string name="description_image_perfil">Imagen de perfil</string>
    <string name="routine_in_ejecution">Ejecucion de rutina</string>
    <string name="routine">Rutina</string>
    <string name="finish_routine_execution">Estas seguro de que queres finalizar la ejecucion?</string>
    <string name="rating_value">Puntuacion:</string>
    <string name="rate_this_routine">Puntua la rutina:</string>
    <string name="confirm">Confirmar</string>
    <string name="congratulations_routine_ended">Rutina finalizada, felicidades!</string>
    <string name="start">Empezar</string>
    <string name="time">Tiempo</string>
    <string name="repetitions">Repeticiones</string>
    <string name="pause">Pausar</string>
    <string name="continue_string">Continuar</string>
    <string name="repetitions_value">Repeticiones: </string>
    <string name="seconds_value">Segundos: </string>
    <string name="exercise_execution_exercise_mode">Modo ejercicio</string>
    <string name="exercise_execution_list_mode">Modo secciones</string>
    <string name="edit_perfil">Editar Perfil</string>
    <string name="resend_email_verification">Reenviar codigo</string>
    <string name="execution_mode_value">Modo de ejecucion:</string>
<!--    String que se muestra cuando usas el link de una rutina-->
    <string name="share_label">Ver rutina</string>
    <string name="verify_register_code">Verificar</string>
    <string name="dificultad">Dificultad</string>
    <!-- opciones del spinner de search-->
    <string name="spinner_diff_ascend">Dificultad ascendente</string>
    <string name="spinner_diff_descend">Dificultad descendente</string>
    <string name="spinner_date_ascend">Fecha de creación ascendente</string>
    <string name="spinner_date_descend">Fecha de creación descendente</string>
    <string name="spinner_rating_ascend">Reseña ascendente</string>
    <string name="spinner_rating_descend">Reseña descendente</string>

</resources>