<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/menu_social"
        android:icon="@drawable/ic_persons"
        android:menuCategory="secondary"
        android:title="@string/bottombaricon_social"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menu_search"
        android:icon="@drawable/ic_search"
        android:menuCategory="secondary"
        android:title="@string/bottombaricon_search"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menu_placeholder"
        android:menuCategory="secondary"
        android:title="" />

    <item
        android:id="@+id/menu_stats"
        android:icon="@drawable/ic_graph"
        android:menuCategory="secondary"
        android:title="@string/bottombaricon_stats"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/menu_perfil"
        android:icon="@drawable/ic_person"
        android:menuCategory="secondary"
        android:title="@string/bottombaricon_perfil"
        app:showAsAction="ifRoom" />
</menu>