<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="8dp">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/materialCardView2"
        android:layout_width="345dp"
        android:layout_height="93dp"
        app:cardBackgroundColor="@color/mainbackground"
        app:cardCornerRadius="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:strokeColor="@color/primary"
        app:strokeWidth="1dp">

        <androidx.constraintlayout.widget.ConstraintLayout

            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/ExcerciseImageInExcercise"
                android:layout_width="95dp"
                android:layout_height="60dp"
                android:layout_marginStart="16dp"
                android:contentDescription="@string/imagen_ilustrativa_del_ejercicio"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.484"
                app:srcCompat="@drawable/ejercicio_demo" />

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/NameObjectInExcerciseCard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:layout_constraintStart_toStartOf="@+id/guideline2"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/NameLabelInExcerciseCard"
                    style="@style/customTextNoSpecificCaseLayout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="0dp"
                    android:layout_marginTop="0dp"
                    android:text="@string/name_in_excercise_card" />

                <TextView
                    android:id="@+id/NameValueInExcerciseCard"
                    style="@style/customTextNoSpecificCaseLayout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp" />
            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.appcompat.widget.LinearLayoutCompat
                android:id="@+id/QuantiyObjectInExcerciseCard"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="12dp"
                app:layout_constraintStart_toStartOf="@+id/NameObjectInExcerciseCard"
                app:layout_constraintTop_toBottomOf="@+id/NameObjectInExcerciseCard">

                <TextView
                    android:id="@+id/QuantityTypeInExcerciseCard"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="0dp"
                    android:layout_marginTop="0dp" />

                <TextView
                    android:id="@+id/QuantityValueInExcerciseCard"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="6dp" />
            </androidx.appcompat.widget.LinearLayoutCompat>

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_begin="116dp" />


        </androidx.constraintlayout.widget.ConstraintLayout>


    </com.google.android.material.card.MaterialCardView>


    <com.google.android.material.chip.Chip
        android:id="@+id/filterchip_difficulty"
        style="@style/CustomChipNoCheck"
        android:layout_width="152dp"
        android:layout_height="50dp"
        android:layout_marginTop="32dp"
        android:checkable="true"
        android:clickable="true"
        android:focusable="true"
        android:textAlignment="center"
        android:textAppearance="@style/customTextNoSpecificCaseLayout"
        app:chipBackgroundColor="@drawable/selectedchip"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/materialCardView2">


    </com.google.android.material.chip.Chip>

    <TextView
        android:id="@+id/difficultyOrderIcon"
        android:layout_width="24dp"
        android:layout_height="20dp"
        android:background="@drawable/ic_arrow_down"
        app:layout_constraintBottom_toBottomOf="@+id/textView"
        app:layout_constraintEnd_toEndOf="@+id/filterchip_difficulty"
        app:layout_constraintStart_toEndOf="@+id/textView" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dificultad"
        app:layout_constraintBottom_toBottomOf="@+id/filterchip_difficulty"
        app:layout_constraintEnd_toEndOf="@+id/filterchip_difficulty"
        app:layout_constraintHorizontal_bias="0.369"
        app:layout_constraintStart_toStartOf="@+id/filterchip_difficulty"
        app:layout_constraintTop_toTopOf="@+id/filterchip_difficulty" />


</androidx.constraintlayout.widget.ConstraintLayout>